--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
         </div>
         <div class="Education">
             <h2>Education</h2>
+            <ul>
+                <li>
+                    Bachelor in Electronics and Communication Engineering 
+                    <ul>
+                        <li>
+                            GPA:8.16
+                        </li>
+            
+                    </ul>
+                </li>
+            </ul>
             <hr>
         </div>
         <div class="Work Experience">
