--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet"
-            href="./Styles.css"/>
+            href="./styles.css"/>
 
     </head>
     <body>
@@ -13,18 +13,18 @@
             <h2>Objective</h2>
             <hr>
         </div>
+
         <div class="Education">
             <h2>Education</h2>
-            
-                <p>Bachelor in Electronics and Communication Engineering </p>
-                    <ul>
-                        <li>
-                            GPA:8.16
-                        </li>
-                  </ul>
-              
-            <hr>
+            <p>Bachelor in Electronics and Communication Engineering </p>
+                <ul>
+                    <li>
+                        GPA:8.16
+                    </li>
+                </ul>
+              <hr>
         </div>
+
         <div class="Work Experience">
             <h2>Work Experience</h2>
             <hr>
