--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1> Vinay Kambhampati</h1>
+        <img class="profile_Image" src="./Profileimages/pass_photo.jpg" alt="Profile Image"/>
         <hr/>
         <div class="objective">
             <h2>Objective</h2>
