--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1> Vinay Kambhampati</h1>
+        
+        <hr/>
         <img class="profile_Image" src="./Profileimages/pass_photo.jpg" alt="Profile Image"/>
         <hr/>
         <div class="objective">
@@ -28,10 +30,28 @@
         <div class="Work Experience">
             <h2>Work Experience</h2>
             <hr>
+            <ul>
+                <li>
+                    <h4>Trainee</h4>
+                    <a href="https://www.ltimindtree.com/"><h4>LTIMindtree</h4></a>
+                    <p>Trained on Web Development</p>
+                </li>
+                <li>
+                    <h4>Software Engineer</h4>
+                    <a href="https://www.ltimindtree.com/"><h4>LTIMindtree</h4></a>
+                </li>
+            </ul>
         </div>
         <div class="Skills">
             <h2>Skills</h2>
             <hr>
+            <ul>
+                <li>Java</li>
+                <li>React.js</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>SQL</li>
+            </ul>
         </div>
     </body>
 </html>
