--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
     </head>
     <body>
-        <h1> Vinay Kambhampati</h1>
-        
+        <h1> Vinay Kambhampati</h1>  
         <hr/>
         <img class="profile_Image" src="./Profileimages/pass_photo.jpg" alt="Profile Image"/>
         <hr/>
@@ -33,12 +32,12 @@
             <ul>
                 <li>
                     <h4>Trainee</h4>
-                    <a href="https://www.ltimindtree.com/"><h4>LTIMindtree</h4></a>
+                    <a href="https://www.ltimindtree.com/" target="blank"><h4>LTIMindtree</h4></a>
                     <p>Trained on Web Development</p>
                 </li>
                 <li>
                     <h4>Software Engineer</h4>
-                    <a href="https://www.ltimindtree.com/"><h4>LTIMindtree</h4></a>
+                    <a href="https://www.ltimindtree.com/" target="blank"><h4>LTIMindtree</h4></a>
                 </li>
             </ul>
         </div>
